--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
     <title>Snake Game</title>
 </head>
 <body>
+    <h1>SNAKE GAME</h1>
+    <button id="start" onclick="iniciarJogo()">START</button>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
