--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>SNAKE GAME</h1>
-    <button id="start" onclick="iniciarJogo()">START</button>
+    <button id="start" type="submit" name="button" value="enter" onclick="iniciarJogo();">START</button>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
